test/errors/assign_global_bad_type.luv
# RET: 1
# ERR: {self}:7:13:    myvar = "hi!"
# ERR: {ssss}                  ^ error: Cannot assign type str to type i32.
myvar = 1

def int main():
    myvar = "hi!"
    return 0
